# canisters

./: .env.local  .gitignore  Cargo.toml  LICENSE  README.md  add_rewards.sh  airdrop.sh  canister_ids.json  deploy-mainnet.sh  deploy.sh  deposit.sh  dfx.json  package-lock.json  package.json  stop.sh
src/claim_canister/: Cargo.toml  claim_canister.did  lib.rs  storage.rs  types.rs
src/claim_canister/src/: claims.rs  governance.rs  lib.rs  storage.rs  types.rs
src/claim_canister/tests/: claim_tests.rs  setup.rs  types.rs  utils.rs
src/commons/: Cargo.toml
src/commons/src/: canister_client.rs  lib.rs  macros.rs  types.rs  utils.rs
src/commons/src/clients/: claim.rs  ledger.rs  mod.rs  pool.rs
src/frontend_canister/: README.md  package-lock.json  package.json  vite.config.js
src/frontend_canister/src/components/: ConnectWallet.vue  CoverCard.vue  CoverPurchaseDialog.vue  Footer.vue  Navbar.vue  NewPositionDialog.vue  TransactionStatus.vue
src/frontend_canister/src/composables/: useWeb3.js
src/frontend_canister/src/constants/: icp.js
src/frontend_canister/src/layouts/: BuyCoverLayout.vue  ClaimGovLayout.vue  CoverLayout.vue  FaucetLayout.vue  MyCoversLayout.vue  StakingLayout.vue  UnderwriterConfigLayout.vue
src/frontend_canister/src/router/: index.js
src/frontend_canister/src/stores/: web3Store.js
src/frontend_canister/src/utils/: errorHandler.js  icpAgent.js
src/icp_canister_backend/: Cargo.toml  icp_canister_backend.did
src/icp_canister_backend/src/: deposit.rs  episodes.rs  governance.rs  ledger.rs  lib.rs  rewards.rs  types.rs
src/icp_canister_backend/src/types/: errors.rs  mod.rs  structs.rs
src/icp_canister_backend/tests/: client.rs  deposit_tests.rs  episodes_tests.rs  governance_tests.rs  rewards_tests.rs  setup.rs  test.rs  types.rs  utils.rs
src/icp_canister_frontend/: package.json
src/icp_canister_frontend/src/: App.js
src/pool_canister/: Cargo.toml  pool_canister.did
src/pool_canister/src/: coverage.rs  deposit.rs  episodes.rs  governance.rs  ledger.rs  lib.rs  rewards.rs  storage.rs  types.rs
src/pool_canister/tests/: client.rs  coverage_tests.rs  deposit_tests.rs  episodes_tests.rs  governance_tests.rs  rewards_tests.rs  setup.rs  utils.rs
src/sat-ui/: package-lock.json
src/sat-ui/src/router/: index.js
