[package]
name = "claim_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
sha2 = "0.10"
commons = { path = "../commons" }

[dev-dependencies]
pocket-ic = "9.0"
pool_canister = { path = "../pool_canister" }
commons = { path = "../commons", features = ["test-utils"] }

[[test]]
name = "claim_tests"
path = "tests/claim_tests.rs"
