[package]
name = "commons"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
pocket-ic = "9"
claim_canister = { path = "../claim_canister" }
pool_canister = { path = "../pool_canister" }

[dev-dependencies]
pocket-ic = "9"

[lib]
doctest = false
